# sam-notify-aws-billing

./: README.md  pyproject.toml  samconfig.toml  template.yaml
cfn/: template.yaml
function/: index.py
function/libs/: get_billing.py  get_secret.py  post_line.py  post_slack.py
