[tool.poetry]
name = "sam-notify-aws-billing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "function/*" }
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.33"
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"
pyproject-flake8 = "^6.1.0"
pyproject-autoflake = "^1.0.2"

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = "E203, E501, W503"

[tool.mypy]
# common
python_version = 3.9
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
